# bootdotdev

./: .spr.yml  pyproject.toml
notes/: Repo Organization Strategy.md
notes/.obsidian/: app.json  appearance.json  command-palette.json  core-plugins.json  graph.json  hotkeys.json  workspace.json
notes/.obsidian/.default/: workspace.json
notes/Python/: 2 Variables - Data type.md  3 Functions.md  4 Scope.md
python/01-learn-to-code/: link.txt
python/02-variables/: link.txt
python/03-functions/: link.txt
